; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decBasic.c_decFloatMinMag.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decBasic.c_decFloatMinMag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @decFloatMinMag(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i64 @DFISNAN(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %4
  %17 = load i32*, i32** %8, align 8
  %18 = call i64 @DFISNAN(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %16, %4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = call i32* @decFloatMin(i32* %21, i32* %22, i32* %23, i32* %24)
  store i32* %25, i32** %5, align 8
  br label %51

26:                                               ; preds = %16
  %27 = load i32*, i32** %7, align 8
  %28 = call i32 @decFloatCopyAbs(i32* %11, i32* %27)
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @decFloatCopyAbs(i32* %12, i32* %29)
  %31 = call i64 @decNumCompare(i32* %11, i32* %12, i32 0)
  store i64 %31, i64* %10, align 8
  %32 = load i64, i64* %10, align 8
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %26
  %35 = load i32*, i32** %6, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = call i32* @decCanonical(i32* %35, i32* %36)
  store i32* %37, i32** %5, align 8
  br label %51

38:                                               ; preds = %26
  %39 = load i64, i64* %10, align 8
  %40 = icmp sgt i64 %39, 0
  br i1 %40, label %41, label %45

41:                                               ; preds = %38
  %42 = load i32*, i32** %6, align 8
  %43 = load i32*, i32** %8, align 8
  %44 = call i32* @decCanonical(i32* %42, i32* %43)
  store i32* %44, i32** %5, align 8
  br label %51

45:                                               ; preds = %38
  %46 = load i32*, i32** %6, align 8
  %47 = load i32*, i32** %7, align 8
  %48 = load i32*, i32** %8, align 8
  %49 = load i32*, i32** %9, align 8
  %50 = call i32* @decFloatMin(i32* %46, i32* %47, i32* %48, i32* %49)
  store i32* %50, i32** %5, align 8
  br label %51

51:                                               ; preds = %45, %41, %34, %20
  %52 = load i32*, i32** %5, align 8
  ret i32* %52
}

declare dso_local i64 @DFISNAN(i32*) #1

declare dso_local i32* @decFloatMin(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @decFloatCopyAbs(i32*, i32*) #1

declare dso_local i64 @decNumCompare(i32*, i32*, i32) #1

declare dso_local i32* @decCanonical(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
